--- a/index.html
+++ b/index.html
@@ -2,10 +2,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/img/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="GlobalStats - Analisi e statistiche globali in tempo reale."
+    />
+    <meta
+      name="keywords"
+      content="statistiche, analisi, dati globali, tempo reale"
+    />
+    <meta name="author" content="Il tuo Nome" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/img/favicon.ico" />
 
-    <title>GlobalStats</title>
+    <title>GlobalStats - Analisi e Statistiche Globali</title>
+
+    <meta
+      property="og:title"
+      content="GlobalStats - Analisi e Statistiche Globali"
+    />
+    <meta
+      property="og:description"
+      content="GlobalStats - Analisi e statistiche globali in tempo reale."
+    />
+    <meta property="og:image" content="./src/assets/img/ImgSite.png" />
+    <meta property="og:url" content="https://globalstats.netlify.app/" />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="GlobalStats - Analisi e Statistiche Globali"
+    />
+    <meta
+      name="twitter:description"
+      content="GlobalStats - Analisi e statistiche globali in tempo reale."
+    />
+    <meta name="twitter:image" content="./src/assets/img/ImgSite.png" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
